@startuml

    package "général" #FFF {
        class Adresse {
            {field} id: <<UUID>>
            ---
            * {field} rue: string
            * {field} country: string
            * {field} zipcode: string
            * {field} ville: string
            * {field} gps: string
            * {field} type: string<ADRESSE>
            * {field} pmr: bool
        }

        class Category {
            {field} id: <<UUID>>
            ---
            * {field} name: string
            * {field} slug: <<SLUG>> (unique)
            * {field} temporary: boolean
        }

        class Configuration {
            {field} id: <<UUID>>
            ---
            * {field} name: string
            {field} value: string
        }

        class "Note Interne" {
            {field} id: <<UUID>>
            ---
            * {field} title: string
            * {field} content: <<HTML>>
            * {field} enable: bool
            * {field} date_debut: <<DATETIME>>
            {field} date_fin: <<DATETIME>>
        }

        class Edito {
            {field} id: <<UUID>>
            ---
            * {field} title: string
            * {field} content: <<HTML>>
            * {field} enable: bool
        }

        class Email {
            {field} id: <<UUID>>
            ---
            * {field} adresse: <<EMAIL>>
            * {field} principal: bool
        }

        class Lien {
            {field} id: <<UUID>>
            ---
            * {field} name: string
            * {field} adresse: <<URL>>
        }

        class Phone {
            {field} id: <<UUID>>
            ---
            * {field} numero: string
            * {field} country: string
            * {field} type: string<PHONE>
            * {field} principal: bool
        }

        class Tag {
            {field} id: <<UUID>>
            ---
            * {field} name: string
            * {field} slug: <<SLUG>> (unique)
        }

        class Template {
            {field} id: <<UUID>>
            ---
            * {field} name: string
            * {field} code: string (unique)
            {field} html: <<HTML>>
            {field} text: <<TEXT>>
        }

        package "Users" #CCC {
            class Groupe {
                {field} id: <<UUID>>
                ---
                * {field} name: string
                * {field} code: string (unique)
            }

            class User {
                {field} id: <<UUID>>
                ---
                * {field} username: string
                * {field} nom: string
                * {field} prenom: string
                * {field} email: <<EMAIL>>
                * {field} password: string
                * {field} enable: bool
            }

            class OauthConnectUser {
                {field} id: <<UUID>>
                ---
                * {field} identity: string
                * {field} name: string
                * {field} data: <<JSON>>
            }

            class Adresse_User {
                * {field} refuser: <<USER>>
            }

            class Phone_User {
                * {field} refuser: <<USER>>
            }

            class Email_User {
                * {field} refuser: <<USER>>
            }

            class Lien_User {
                * {field} refuser: <<USER>>
            }

            Adresse <|-- Adresse_User
            Phone <|-- Phone_User
            Email <|-- Email_User
            Lien <|-- Lien_User
            User }o--|| OauthConnectUser
            User }o--|| Adresse_User
            User }o--|| Phone_User
            User }o--|| Email_User
            User }o--|| Lien_User
        }

        User }o--|| Post
        User }o--|| Edito
        User }o--|| Bookmark
        User }o--|| History
        User }o--o{ "Note Interne"
        User }o--o{ Etablissement

        package "Etablissements" #CCC {
            class Etablissement {
                {field} id: <<UUID>>
                ---
            }

            class Horaire {
                {field} id: <<UUID>>
                ---
                {field} jour: integer
                {field} heure_dm: integer
                {field} heure_fm: integer
                {field} heure_da: integer
                {field} heure_fa: integer
            }

            class Phone_Etablissement {
                * {field} refetablissement: <<ETABLISSEMENT>>
            }

            class Adresse_Etablissement {
                * {field} refetablissement: <<ETABLISSEMENT>>
            }

            class Email_Etablissement {
                * {field} refetablissement: <<ETABLISSEMENT>>
            }

            class Lien_Etablissement {
                * {field} refetablissement: <<ETABLISSEMENT>>
            }

            Adresse <|-- Adresse_Etablissement
            Phone <|-- Phone_Etablissement
            Email <|-- Email_Etablissement
            Lien <|-- Lien_Etablissement


            Etablissement }o--|| Adresse_Etablissement
            Etablissement }o--|| Horaire
            Etablissement }o--|| Phone_Etablissement
            Etablissement }o--|| Email_Etablissement
            Etablissement }o--|| Lien_Etablissement
        }

        package "Histoires" #CCC {
            class History {
                {field} id: <<UUID>>
                ---
                * {field} name: string
                * {field} resume: string
                * {field} slug: <<SLUG>> (unique)
                * {field} enable: bool
                * {field} status: string<HISTORY>
                * {field} end: bool
            }

            class Chapitre {
                {field} id: <<UUID>>
                ---
                * {field} name: string
                * {field} content: <<HTML>>
                * {field} position: int
                * {field} enable: bool
                * {field} status: string<CHAPITRE>
            }

            class Tag_Histoire {
                * {field} refhistoire: <<HISTOIRE>>
            }

            Tag <|-- Tag_Histoire

            History }o--|| Chapitre
            Chapitre }o--|| Tag_Histoire
        }

        package "Bookmarks" #CCC {
            class Bookmark {
                {field} id: <<UUID>>
                ---
                * {field} name: string
                * {field} slug: <<SLUG>> (unique)
                * {field} url: <<URL>>
                * {field} enable: bool
                * {field} status: string<BOOKMARK>
            }

            class Tag_Bookmark {
                * {field} refbookmark: <<BOOKMARK>>
            }

            Tag <|-- Tag_Bookmark

            Bookmark }o--|| Tag_Bookmark
        }

        package "Partenaires" #CCC {
            class Partenaire {
                {field} id: <<UUID>>
                ---
                * {field} name: string
                * {field} description: string
                * {field} slogan: string
                * {field} url: <<URL>>
                * {field} enable: bool
            }

            class Category_Partenaire {
                * {field} refpartenaire: <<PARTENAIRE>>
            }

            Category <|-- Category_Partenaire
        }

        package "Posts" #CCC {
            class Post {
                {field} id: <<UUID>>
                ---
                * {field} name: string
                * {field} content: <<HTML>>
                * {field} slug: <<SLUG>> (unique)
                * {field} enable: bool
                * {field} status: string<POST>
            }

            class Category_Post {
                * {field} refpost: <<POST>>
            }
            class Tag_Post {
                * {field} refpost: <<POST>>
            }


            Tag <|-- Tag_Post
            Category <|-- Category_Post


            Post }o--|| Category_Post
            Post }o--|| Tag_Post
        }
    }

@enduml
